// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainNav /> should warn when missing nested props: history.push, firebase.logout 1`] = `
"Warning: Failed prop type: The prop \`history.push\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav"
`;

exports[`<MainNav /> should warn when missing nested props: history.push, firebase.logout 2`] = `
"Warning: Failed prop type: The prop \`firebase.logout\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav"
`;

exports[`<MainNav /> should warn when missing props: auth, match, history, firebase 1`] = `
"Warning: Failed prop type: The prop \`auth\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav"
`;

exports[`<MainNav /> should warn when missing props: auth, match, history, firebase 2`] = `
"Warning: Failed prop type: The prop \`match\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav"
`;

exports[`<MainNav /> should warn when missing props: auth, match, history, firebase 3`] = `
"Warning: Failed prop type: The prop \`history\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav"
`;

exports[`<MainNav /> should warn when missing props: auth, match, history, firebase 4`] = `
"Warning: Failed prop type: The prop \`firebase\` is marked as required in \`MainNav\`, but its value is \`undefined\`.
    in MainNav"
`;
